# couch-schema

./: LICENSE  couch-schema.cabal  default.nix  get--_active_tasks.json  get--_all_dbs.json  get--_db_updates.json  get--_stats.json  get--_uuids.json  post--_restart.json
lib/Database/Couch/: Schema.hs
schema/: copy--db-_design-ddoc.json  copy--db-docid.json  delete--_config-section-key.json  delete--db-_design-ddoc.json  delete--db-docid.json  delete--db.json  get--.json  get--_config-section-key.json  get--_config-section.json  get--_config.json  get--_db_updates.json  get--db-_all_docs.json  get--db-_changes.json  get--db-_design-ddoc-_info.json  get--db-_design-ddoc-_view-view.json  get--db-_design-ddoc.json  get--db-_revs_limit.json  get--db-_security.json  get--db-docid.json  get--db.json  head--db-_design-ddoc.json  head--db-docid.json  head--db.json  post--_restart.json  post--db-_bulk_docs.json  post--db-_compact-ddoc.json  post--db-_compact.json  post--db-_design-ddoc-_view-view.json  post--db-_ensure_full_commit.json  post--db-_missing_revs.json  post--db-_purge.json  post--db-_revs_diff.json  post--db-_temp_view.json  post--db-_view_cleanup.json  post--db.json  put--_config-section-key.json  put--db-_revs_limit.json  put--db-_security.json  put--db-docid.json  put--db.json
test/: Validate.hs
